Fixed Firefly code

--- a/rao3/rao3_3.ipynb
+++ b/rao3/rao3_3.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Parameter di dalam firefly algorithm ada berapa jenis seperti yang dijelaskan di bawah ini"
+    "RAO 3 sendiri tidak memiliki parameter yang pasti. Namun ada beberapa parameter yang serupa dengan algoritma lainnya, yaitu Iterasi."
    ]
   },
   {
@@ -122,17 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parameter Firefly Algorithm\n",
-    "n = 100  # Jumlah kunang-kunang dalam 1 populasi\n",
-    "max_iter = 100 # Jumlah iteras\n",
+    "max_iter = 100 # Jumlah iterasi\n",
     "alpha = 0.5  # Learning rate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Parameter yang digunakan disini hanya digunakan untuk kebutuhan visualisasi"
    ]
   },
   {
