Update Firefly Explanation

--- a/firefly/firefly_1.ipynb
+++ b/firefly/firefly_1.ipynb
@@ -19,7 +19,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Install Dependicies"
+    "Algoritma Firefly adalah salah satu metode optimasi berbasis populasi yang terinspirasi dari perilaku alami dari kunang kunang. Algoritma Firefly bekerja sebagai berikut:\n",
+    "\n",
+    "- Inisialisasi: Algoritma ini dimulai dengan inisialisasi sejumlah kunang-kunang secara acak dalam sebuah tempat pencarian. Setiap kunang-kunang ini memiliki posisi yang merepresentasikan sebuah solusi potensial dalam tempat pencarian, dan setiap posisi memiliki nilai kecerahan yang terkait dengan kualitas solusi tersebut (biasanya kecerahan berbanding terbalik dengan nilai fungsi tujuan).\n",
+    "\n",
+    "- Kecerahan atau Atraktivitas: Kecerahan kunang-kunang dianggap proporsional terhadap nilai kecocokan atau fitness dari solusi yang direpresentasikannya. Kecerahan ini juga menentukan daya tarik kunang-kunang tersebut terhadap kunang-kunang lain. Dalam konteks optimasi, kunang-kunang yang lebih terang memiliki solusi yang lebih baik dan lebih menarik bagi yang lain.\n",
+    "\n",
+    "- Pergerakan Kunang-Kunang: Kunang-kunang yang kurang terang akan bergerak menuju kunang-kunang yang lebih terang berdasarkan daya tariknya, yang biasanya berkurang dengan bertambahnya jarak antar kunang-kunang. Gerakan ini dihitung menggunakan rumus khusus yang menggabungkan atraksi dan komponen pergerakan acak.\n",
+    "\n",
+    "- Pembaruan Posisi: Posisi setiap kunang-kunang diperbarui berdasarkan atraksinya kepada kunang-kunang lain yang lebih terang. Rumusnya bisa mencakup komponen eksplorasi acak, yang biasanya diimplementasikan sebagai variabel yang mengikuti distribusi normal atau seragam.\n",
+    "\n",
+    "- Iterasi: Langkah-langkah di atas diulang untuk sejumlah iterasi yang ditentukan atau sampai kriteria berhenti terpenuhi (seperti konvergensi pada solusi atau mencapai batas maksimum iterasi).\n",
+    "\n",
+    "- Evaluasi Solusi: Pada akhir iterasi, solusi terbaik yang ditemukan oleh kunang-kunang (yaitu, posisi kunang-kunang dengan kecerahan tertinggi) akan diambil sebagai solusi optimal.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Instal Library"
    ]
   },
   {
